--- a/themes/stage/_config.yml
+++ b/themes/stage/_config.yml
@@ -11,7 +11,7 @@ avatar: /images/avatar.jpg
 # social
 social:
   github: "https://github.com/wentaohao"
-  weibo: "#"
+  weibo: "https://weibo.com/u/6403915845"
 # about and comment
 about:
   enable: true
